# solo-agent-agile-template

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  STATUS.md  claude_agent_sdk_docs.md  docker-compose.yml  init-project.sh
.claude/: MEMORY.md  SCRATCHPAD.md
.claude/commands/: architect.md  context.md  debug.md  done.md  init.md  module.md  next.md  plan.md  review.md  standup.md  track.md
.claude/prompts/: explain-code.md  review-performance.md  review-security.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: main.py
backend/src/api/: router.py
backend/src/config/: settings.py
backend/src/modules/agent/: __init__.py  driver.py  service.py
backend/src/modules/agent/prompts/: system.md
backend/src/modules/chat/: __init__.py  router.py
backend/tests/: conftest.py
docker/: docker-compose.backend.yml  docker-compose.db.yml  docker-compose.frontend.yml  docker-compose.yml
docker/envs/: dev.yml  prod.yml  staging.yml
docs/: API.md  ARCHITECTURE.md  CONVENTIONS.md  DEPLOY.md  DOMAIN.md  INTERFACES.md  LEARNINGS.md  MIGRATION_LOG.md  PATTERNS.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
docs/architecture/: DATA_FLOW.md  MODULES.md  OVERVIEW.md
docs/decisions/: 000-template.md
docs/history/: LEARNINGS.md  MIGRATION_LOG.md
docs/interfaces/: API_EXTERNAL.md  CONTRACTS.md  EVENTS.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
scripts/: docker-dev.ps1  docker-dev.sh  docker-prod.ps1  docker-prod.sh  docker-staging.ps1  docker-staging.sh
(+26 files in other folders)
